# blurveil

./: .gitignore  README.md  core.py  main.py  pyproject.toml
core/: sanitizer.py
gui/: hotkey.py  preview.py  snipper.py  tray.py
