[project]
name = "blurveil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "mss>=10.1.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pynput>=1.8.1",
    "pyqt6>=6.10.0",
    "pytesseract>=0.3.13",
    "python-xlib>=0.33",
]
